--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -4,15 +4,28 @@ on:
     branches:
       - master
 jobs:
-  deploy:
-    if: false
-    name: Deploy app
+  deploy_backend:
+    if: ${{ github.event.label.name == 'deploy_back' }}
     runs-on: ubuntu-latest
     concurrency: deploy-group
-    env:
-      FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only
-        
+      - name: Deploy Backend
+        run: flyctl deploy --remote-only
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+        working-directory: ./SpringBootBusinessTripsv2
+
+  deploy_frontend:
+    if: ${{ github.event.label.name == 'deploy_front' }}
+    runs-on: ubuntu-latest
+    concurrency: deploy-group
+    steps:
+      - uses: actions/checkout@v4
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Deploy Frontend
+        run: flyctl deploy --remote-only
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+        working-directory: ./businesstrips-wishlist-client-func-v2-usereducer-after
