--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -11,8 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
-        name: Deploy DB
-        run: flyctl deploy
+      - run: flyctl deploy
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         working-directory: ./businesstrips-db
@@ -23,8 +22,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
-        name: Deploy Backend
-        run: flyctl deploy --remote-only --build-arg=ALLOW_ORIGIN=${{ vars.FRONTEND_URL }}
+      - run: flyctl deploy --remote-only --build-arg=ALLOW_ORIGIN=${{ vars.FRONTEND_URL }}
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         working-directory: ./spring-backend
@@ -35,8 +33,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
-        name: Deploy Frontend
-        run: flyctl deploy --remote-only
+      - run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         working-directory: ./businesstrips-frontend
