--- a/spring-backend/Dockerfile
+++ b/spring-backend/Dockerfile
@@ -5,7 +5,8 @@ COPY src ./src
 RUN ls -laR
 RUN mvn install -DskipTests
 
-FROM openjdk:17-slim
+FROM openjdk:18-slim
 COPY --from=backend-build /app/target/*.jar app.jar
-ARG ALLOW_ORIGIN="http://localhost:3000"
-ENTRYPOINT ["sh", "-c", "APP_ALLOWEDORIGIN=$ALLOW_ORIGIN", "java", "-jar", "app.jar"]
+ARG ALLOWED_ORIGIN="http://localhost:3000"
+ENV ALLOWED_ORIGIN_ENV=$ALLOWED_ORIGIN
+ENTRYPOINT java -jar ./app.jar --allowedOrigin=$ALLOWED_ORIGIN_ENV
