Support fly.io db connection string

--- a/businesstrips-backend/src/main/resources/application.properties
+++ b/businesstrips-backend/src/main/resources/application.properties
@@ -1,6 +1,4 @@
 allowedOrigin="http://localhost:3000"
-spring.datasource.url=jdbc:postgresql://localhost:5432/businesstrips
-spring.datasource.username=postgres
-spring.datasource.password=mysecretpassword
 
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
