--- a/businesstrips-backend/Dockerfile
+++ b/businesstrips-backend/Dockerfile
@@ -7,6 +7,4 @@ RUN mvn install -DskipTests
 
 FROM openjdk:18-slim
 COPY --from=backend-build /app/target/*.jar app.jar
-ARG ALLOWED_ORIGIN="http://localhost:3000"
-ENV ALLOWED_ORIGIN_ENV=$ALLOWED_ORIGIN
-ENTRYPOINT java -jar ./app.jar --allowedOrigin=$ALLOWED_ORIGIN_ENV
+ENTRYPOINT java -jar ./app.jar
