--- a/businesstrips-backend/src/main/resources/application.properties
+++ b/businesstrips-backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-allowedOrigin="http://localhost:3000"
-
+#spring.datasource.url=set during runtime
+#spring.datasource.username=set during runtime
+#spring.datasource.password=set during runtime
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
