Deploy rest to new org

--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -9,12 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     concurrency: deploy-group
     steps:
-      - uses: actions/checkout@v4
-      - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-        working-directory: ./businesstrips-db
+      - run: |
+          echo "Not possible"
   deploy_backend:
     if: ${{ contains(github.event.pull_request.labels.*.name, 'deploy_backend') }}
     runs-on: ubuntu-latest
